# voicekey

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/oai_whisper/: app.py  cli.py  config.py  constants.py  display.py  menubar.py  permissions.py  recorder.py  transcriber.py
src/voicekey/: app.py  auth.py  cli.py  config.py  constants.py  display.py  hotkey.py  inserter.py  menubar.py  overlay.py  recorder.py
src/voicekey/providers/: __init__.py  openai.py
tests/: test_auth.py  test_cli.py  test_config.py  test_display.py  test_hotkey.py  test_recorder.py  test_transcriber.py
