[project]
name = "oai-whisper"
version = "0.1.0"
description = "macOS CLI voice dictation tool using OpenAI transcription"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "keyring>=25.0",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "httpx>=0.27",
    "rumps>=0.4",
    "tomli-w>=1.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]

[project.scripts]
oai-whisper = "oai_whisper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
